# HW1_Team3

./: README.md
Code/: HW3.ipynb  HW3.tex  Lol.ipynb  Lol.tex  Scratch Book.ipynb
Code/.ipynb_checkpoints/: HW3-checkpoint.ipynb  Scratch Book-checkpoint.ipynb
Code/Figures/: solution_size.eps  states_explored.eps  time_taken.eps
Code/Towers/: hanoi10_blackbox  hanoi10_sol  hanoi10_vhpop  hanoi12.pddl  hanoi12_sol
Code/Worlds/: sokoban_domain.pddl  sokoban_domain.pddl~  world1.txt  world1_proble.pddl  world1_proble.pddl.soln  world2.txt  world2_proble.pddl  world2_proble.pddl.soln  world3.txt  world3_proble.pddl  world3_proble.pddl.soln  world4.txt  world4_proble.pddl  world4_proble.pddl.soln  world4_proble.pddl~
Code/question_3/: CMakeLists.txt
Code/question_3/plans/: plan_1.txt  plan_2.txt  plan_3.txt  plan_4.txt
Code/question_3/problems/: q1.txt  q2.txt  q3.txt  q4.txt
Code/question_3/src/: planner_state_space.cc  sokobanplanner.cpp  sokobanplanner.h
Code/question_5/FF/: .hanoi11.pddl.swp  hanoi10.pddl  hanoi10_sol.txt  hanoi11.pddl  hanoi12.pddl  hanoi12_sol.txt  hanoi3.pddl  hanoi4.pddl  hanoi5.pddl  hanoi6.pddl  hanoi7.pddl  hanoi8.pddl  hanoi9.pddl
Code/question_5/FF/FF-v2.3/: ff  ff.h
Code/question_5/HTN/: towers_of_hanoi.py
question_3/: CMakeLists.txt
question_3/examples/: sokoban_domain.dl  sokoban_q4.dl
question_3/src/: planner_state_space.cc
